--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <!-- SEO Optimisé -->
+  <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TV8RQ3GD');</script>
+<!-- End Google Tag Manager -->
   <title>Missy Soga | Soins visage dermo-cosmétiques pour peaux sensibles</title>
   <meta name="description" content="Missy Soga développe des soins visage dermo-cosmétiques inspirés de la pharmacie : formules sobres, haute tolérance, routines courtes pour peaux sensibles et fragilisées." />
   <style>
@@ -754,6 +760,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-TV8RQ3GD"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
   <!-- Éléments d'effets visuels -->
   <div class="star"></div>
   <div class="star"></div>
