--- a/index.html
+++ b/index.html
@@ -985,11 +985,14 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
                 </p>
               </div>
               <div class="card" style="margin:0; box-shadow:none;">
-                <h3>Promesse</h3>
-                <p>
-                  Des formules conçues pour s'intégrer à une routine simple :
-                  nettoyer, protéger, calmer, maintenir l'hydratation — sans sur-stimulation.
-                </p>
+              <h3>Promesse</h3>
+<p>
+  Des formules conçues pour s'intégrer à une routine simple :
+  nettoyer, protéger, calmer, maintenir l'hydratation — sans sur-stimulation.
+  <a href="analyse-soin-visage-peau-sensible.html" style="color:var(--muted); font-size:0.9em; text-decoration:none; border-bottom:1px dotted var(--line); margin-left:8px; padding:2px 0;">
+    Voir l'analyse technique
+  </a>
+</p>
               </div>
             </div>
           </div>
