--- a/analyse-soin-visage-peau-sensible.html
+++ b/analyse-soin-visage-peau-sensible.html
@@ -13,13 +13,14 @@
   <!-- End Google Tag Manager -->
   
   <!-- Google Analytics 4 (GA4) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VOTRE_ID_GA4"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-VOTRE_ID_GA4');
-  </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P8ELV8JPK9"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-P8ELV8JPK9');
+</script>
+
   
   <title>Analyse technique soin visage peau sensible | Missy Soga</title>
   <meta name="description" content="Analyse technique complète d'un soin visage pour peaux sensibles : critères de formulation, tolérance cutanée, différences dermo-cosmétiques. Approche pharmacie." />
