--- a/index.html
+++ b/index.html
@@ -989,8 +989,19 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
 <p>
   Des formules conçues pour s'intégrer à une routine simple :
   nettoyer, protéger, calmer, maintenir l'hydratation — sans sur-stimulation.
-  <a href="analyse-soin-visage-peau-sensible.html" style="color:var(--muted); font-size:0.9em; text-decoration:none; border-bottom:1px dotted var(--line); margin-left:8px; padding:2px 0;">
-    Voir l'analyse technique
+  <a href="analyse-soin-visage-peau-sensible.html" 
+     style="color:#d4b483; 
+            font-size:0.9em; 
+            font-weight:600;
+            text-decoration:none; 
+            border:1px solid #d4b483; 
+            margin-left:10px; 
+            padding:4px 10px;
+            border-radius: 12px;
+            background: rgba(212, 180, 131, 0.08);
+            display: inline-block;
+            transition: all 0.3s ease;">
+    📄 Voir l'analyse technique
   </a>
 </p>
               </div>
