--- a/index.html
+++ b/index.html
@@ -1383,7 +1383,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
             Pour les pharmacies, partenaires et demandes professionnelles :
             demande de kit, devis, ou dossier technique.
           </p>
-          <a href="mailto:cyril.ragonet@gmail.com">cyril.ragonet@gmail.com</a>
+          <a href="mailto:cyril.ragonet@gmail.com">ordo@missysoga.com</a>
           <div style="margin-top:10px; color:rgba(233,242,243,.85); font-size:12px;">
             © <span id="year"></span> Missy Soga • Tous droits réservés
           </div>
@@ -1504,3 +1504,4 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
   </script>
 </body>
 </html>
+
