--- a/analyse-soin-visage-peau-sensible.html
+++ b/analyse-soin-visage-peau-sensible.html
@@ -949,10 +949,11 @@
             Un soin visage pour peaux sensibles est défini par :
           </p>
           <ul class="doc-list">
-            <li>une <strong>formulation lisible</strong></li>
-            <li>un nombre d'actifs maîtrisé</li>
-            <li>une approche orientée <strong>usage quotidien</strong></li>
-          </ul>
+            <ul>
+  <li>une <strong><a href="formule-niacinamide.html" style="color:inherit; text-decoration:none; border-bottom:1px dashed rgba(111,241,224,.5);">formulation lisible</a></strong></li>
+  <li>un nombre d'actifs maîtrisé</li>
+  <li>une approche orientée <strong>usage quotidien</strong></li>
+</ul>
           <p>
             La tolérance est un <strong>équilibre</strong>, non une promesse.
           </p>
