--- a/landing.html
+++ b/landing.html
@@ -481,9 +481,9 @@
       <section class="hero-section">
         <h1 class="hero-title">Un soin pour peau sensible — pensé à Aix-en-Provence.</h1>
         <p class="hero-subtitle">
-          Bientôt disponible en pharmacie.<br>
-          Recevez l'information en priorité.
-        </p>
+  <span style="color: #00FFFF; font-weight: bold;">Bientôt disponible en pharmacie.</span><br>
+  Recevez l'information en priorité.
+</p>
       </section>
 
       <!-- Benefits - Version sobre sans icônes -->
