--- a/landing.html
+++ b/landing.html
@@ -570,10 +570,10 @@
 
       <!-- Crédibilité -->
       <section class="credibility-section">
-        <h3 class="credibility-title">Développé à Aix-en-Provence</h3>
+        <h3 class="credibility-title">Formulé avec soin pour les peaux sensibles</h3>
         <div class="credibility-grid">
           <div class="credibility-item">Approche lisible, sans superflu</div>
-          <div class="credibility-item">Pensé pour les peaux sensibles</div>
+          <div class="credibility-item">Formulé en France</div>
           <div class="credibility-item">Formulation sobre et efficace</div>
         </div>
       </section>
@@ -644,7 +644,7 @@
             form.reset();
             
             // Afficher message de succès
-            alert('✅ Merci ! Vous serez informé du lancement en pharmacie.');
+            alert('✅ Merci ! Vous serez informé(e) du lancement en pharmacie.');
             
             // Envoyer l'événement à Google Analytics
             if (typeof gtag !== 'undefined') {
@@ -699,3 +699,4 @@
   </script>
 </body>
 </html>
+
