--- a/landing.html
+++ b/landing.html
@@ -570,7 +570,7 @@
 
       <!-- Crédibilité -->
       <section class="credibility-section">
-        <h3 class="credibility-title">Formulé avec soin pour les peaux sensibles</h3>
+        <h3 class="credibility-title">🇫🇷 Formulé avec soin pour les peaux sensibles</h3>
         <div class="credibility-grid">
           <div class="credibility-item">Approche lisible, sans superflu</div>
           <div class="credibility-item">Formulé en France</div>
@@ -699,4 +699,5 @@
   </script>
 </body>
 </html>
+
 
