--- a/formule-niacinamide.html
+++ b/formule-niacinamide.html
@@ -1126,7 +1126,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             Pour les pharmacies, partenaires et demandes professionnelles :
             demande de kit, devis, ou dossier technique.
           </p>
-          <a href="mailto:cyril.ragonet@gmail.com">cyril.ragonet@gmail.com</a>
+          <a href="mailto:ordo@missysoga.com">ordo@missysoga.com</a>
           <div style="margin-top:10px; color:rgba(233,242,243,.85); font-size:12px;">
             © <span id="year"></span> Missy Soga • Tous droits réservés
           </div>
@@ -1246,4 +1246,5 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     });
   </script>
 </body>
+
 </html>
