--- a/index.html
+++ b/index.html
@@ -907,7 +907,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   <div class="glow"></div>
   <div class="glow"></div>
 
-  <!-- H1 principal pour SEO -->
+  <!-- Topbar -->
   <div class="topbar">
     <div class="wrap">
       <div class="nav">
@@ -934,6 +934,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
   </div>
 
+  <!-- Header principal -->
   <header class="hero">
     <div class="wrap">
       <div class="heroGrid">
@@ -943,7 +944,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             Soins essentiels • Tolérance élevée • Efficacité lisible
           </div>
 
-          <!-- H1 pour SEO -->
           <h1>Soins visage dermo-cosmétiques pour peaux sensibles</h1>
           <p class="sub">
             Missy Soga est une marque dermo-cosmétique orientée pharmacie :
@@ -957,13 +957,11 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="pill"><span class="dot gold"></span> Positionnement officinal</div>
           </div>
           
-          <!-- Image back.png ajoutée ici -->
           <img src="back.png" alt="Exigence de clarté et de sécurité d'usage" class="background-image" />
         </div>
 
         <aside class="panel heroSide">
           <div class="sideTop">
-            <!-- Image header PNG remplaçant les 4 points -->
             <img src="header.png" alt="Missy Soga - Soins dermo-cosmétiques pour peaux sensibles" class="header-img" />
           </div>
 
@@ -985,25 +983,25 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
                 </p>
               </div>
               <div class="card" style="margin:0; box-shadow:none;">
-              <h3>Promesse</h3>
-<p>
-  Des formules conçues pour s'intégrer à une routine simple :
-  nettoyer, protéger, calmer, maintenir l'hydratation — sans sur-stimulation.
-  <a href="analyse-soin-visage-peau-sensible.html" 
-     style="color:#d4b483; 
-            font-size:0.9em; 
-            font-weight:600;
-            text-decoration:none; 
-            border:1px solid #d4b483; 
-            margin-left:10px; 
-            padding:4px 10px;
-            border-radius: 12px;
-            background: rgba(212, 180, 131, 0.08);
-            display: inline-block;
-            transition: all 0.3s ease;">
-    📄 Voir l'analyse technique
-  </a>
-</p>
+                <h3>Promesse</h3>
+                <p>
+                  Des formules conçues pour s'intégrer à une routine simple :
+                  nettoyer, protéger, calmer, maintenir l'hydratation — sans sur-stimulation.
+                  <a href="analyse-soin-visage-peau-sensible.html" 
+                     style="color:#d4b483; 
+                            font-size:0.9em; 
+                            font-weight:600;
+                            text-decoration:none; 
+                            border:1px solid #d4b483; 
+                            margin-left:10px; 
+                            padding:4px 10px;
+                            border-radius: 12px;
+                            background: rgba(212, 180, 131, 0.08);
+                            display: inline-block;
+                            transition: all 0.3s ease;">
+                    📄 Voir l'analyse technique
+                  </a>
+                </p>
               </div>
             </div>
           </div>
@@ -1012,7 +1010,42 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
     </div>
   </header>
 
-  <!-- H2 pour SEO : Une approche dermo inspirée de la pharmacie -->
+  <!-- ============================================= -->
+  <!-- Carte de vente du produit phare (product17)   -->
+  <!-- Placée AVANT la section "Une approche dermo"  -->
+  <!-- ============================================= -->
+  <div class="wrap" style="margin-bottom: 40px;">
+    <div class="productGrid">
+      <article class="product">
+        <div class="img">
+          <img src="product17.png" alt="Missy Soga Soin Visage Haute Tolérance - Niacinamide 10% et Glycérine 5%" />
+        </div>
+        <div class="body">
+          <div class="meta">
+            <strong>SOIN VISAGE HAUTE TOLÉRANCE</strong>
+            <span>Format 50ml • niacinamide 10%</span>
+          </div>
+          <ul class="list">
+            <li><span class="tick"></span><span>Non comédogène, sans parfum, sans alcool.</span></li>
+            <li><span class="tick"></span><span>Testé dermatologiquement, convient aux peaux sensibles.</span></li>
+            <li><span class="tick"></span><span>Renforce la barrière cutanée et apaise les sensations d’inconfort.</span></li>
+          </ul>
+          <div class="badgeRow" style="margin-top:12px;">
+            <span class="badge">Peaux sensibles</span>
+            <span class="badge">Peaux réactives</span>
+            <span class="badge">Peaux fragilisées</span>
+          </div>
+          <!-- Prix et lien Stripe -->
+          <div style="margin-top:20px; display:flex; align-items:center; gap:20px; flex-wrap:wrap;">
+            <span style="font-size:28px; font-weight:800; color:var(--gold);">38€</span>
+            <a href="https://buy.stripe.com/6oU00j1ZSh1Z90bgGebII00" target="_blank" class="cta" style="padding:8px 24px;">Acheter maintenant</a>
+          </div>
+        </div>
+      </article>
+    </div>
+  </div>
+
+  <!-- Section : Une approche dermo inspirée de la pharmacie -->
   <section id="approche" class="section">
     <div class="wrap">
       <h2>Une approche dermo inspirée de la pharmacie</h2>
@@ -1022,7 +1055,6 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
       </p>
 
       <div class="cards">
-        <!-- H3 pour SEO : Barrière cutanée et confort quotidien -->
         <div class="card">
           <h3>Barrière cutanée et confort quotidien</h3>
           <p>
@@ -1036,7 +1068,6 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
           </div>
         </div>
 
-        <!-- H3 pour SEO : Minimalisme et sécurité d'usage -->
         <div class="card">
           <h3>Minimalisme et sécurité d'usage</h3>
           <p>
@@ -1050,7 +1081,6 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
           </div>
         </div>
 
-        <!-- H3 pour SEO : Texture maîtrisée pour peaux fragiles -->
         <div class="card">
           <h3>Texture maîtrisée pour peaux fragiles</h3>
           <p>
@@ -1064,7 +1094,6 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
           </div>
         </div>
 
-        <!-- H3 pour SEO : Marque de conseil dermo-cosmétique -->
         <div class="card">
           <h3>Marque de conseil dermo-cosmétique</h3>
           <p>
@@ -1081,7 +1110,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
     </div>
   </section>
 
-  <!-- H2 pour SEO : Missy Soga, marque dermo-cosmétique française -->
+  <!-- Section : Histoire de la marque -->
   <section id="histoire" class="section">
     <div class="wrap">
       <h2>Missy Soga, marque dermo-cosmétique française</h2>
@@ -1128,7 +1157,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
     </div>
   </section>
 
-  <!-- H2 pour SEO : Des soins visage pensés pour la tolérance cutanée -->
+  <!-- Section : Gamme de produits (sans le produit vedette, déjà présent plus haut) -->
   <section id="produits" class="section">
     <div class="wrap">
       <h2>Des soins visage pensés pour la tolérance cutanée</h2>
@@ -1175,7 +1204,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
     </div>
   </section>
 
-  <!-- H2 pour SEO : Blackstone, rituel minéral de Missy Soga -->
+  <!-- Section : Blackstone -->
   <section id="blackstone" class="section">
     <div class="wrap">
       <h2>Blackstone, rituel minéral de Missy Soga</h2>
@@ -1272,7 +1301,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
     </div>
   </section>
 
-  <!-- H2 pour SEO : Routines courtes et lisibles pour la peau -->
+  <!-- Section : Standards -->
   <section id="standards" class="section">
     <div class="wrap">
       <h2>Routines courtes et lisibles pour la peau</h2>
@@ -1321,6 +1350,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
     </div>
   </section>
 
+  <!-- Section : Pharmacie -->
   <section id="pharma" class="section">
     <div class="wrap">
       <h2>Orientation pharmacie</h2>
@@ -1362,6 +1392,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
     </div>
   </section>
 
+  <!-- Footer -->
   <footer id="contact">
     <div class="wrap">
       <div class="footGrid">
@@ -1383,7 +1414,7 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
             Pour les pharmacies, partenaires et demandes professionnelles :
             demande de kit, devis, ou dossier technique.
           </p>
-          <a href="mailto:cyril.ragonet@gmail.com">ordo@missysoga.com</a>
+          <a href="mailto:cyril.ragonet@gmail.com">cyril.ragonet@gmail.com</a>
           <div style="margin-top:10px; color:rgba(233,242,243,.85); font-size:12px;">
             © <span id="year"></span> Missy Soga • Tous droits réservés
           </div>
@@ -1504,4 +1535,3 @@ Des formules claires, utiles, pensées pour respecter la peau et s'intégrer à 
   </script>
 </body>
 </html>
-
